k8s/webapp/phpmyadmin/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: mariadb
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
